--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -40,7 +40,7 @@
                 <li><a href="{% url 'add_address' %}"><i class="fas fa-map-marker-alt"></i>Add Address</a>
                 <li><a href="{% url 'add_device_model' %}"><i class="fas fa-wifi"></i>Add Device to Catalog</a></li>
                 <li><a href="{% url 'add_home' %}"><i class="fas fa-home"></i>Add Home</a></li>
-                <li><a href="{% url 'add_device_model' %}"><i class="fas fa-industry"></i>Add Manufacturer</a></li>
+                <li><a href="{% url 'add_manufacturer' %}"><i class="fas fa-industry"></i>Add Manufacturer</a></li>
                 <li><a href="{% url 'add_seller' %}"><i class="fas fa-store"></i>Add Seller</a></li>
                 <li><a href="{% url 'add_service_provider' %}"><i class="fas fa-tools"></i>Add Service Provider</a></li>
 
