--- a/dashboard/templates/dashboard/home.html
+++ b/dashboard/templates/dashboard/home.html
@@ -1,15 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-{% for thing in things %}
-    <h2>{{ thing.name }}</h2>
-    <p>{{ thing.lifetime_used }}</p>
-    <p>{{ thing.mfg_date }}</p>
-    <p>{{ thing.mfg_date }}</p>
-{% endfor %}
-</body>
-</html>
+{% extends "dashboard/base.html" %}
+{% block content %}
+    {% for thing in things %}
+        <div class="card" style="width: 22rem;">
+            <img src="https://i.imgur.com/SAnmzn0.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title"> Device Name: {{ thing.name }}</h5>
+                <p class="card-text"> Lifetime used: {{ thing.lifetime_used }}</p>
+                <p class="card-text"> Lifetime Max: {{ thing.max_lifetime }}</p>
+                <p class="card-text"> Date manufactured: {{ thing.mfg_date }}</p>
+                <p class="card-text"> Last Serviced: {{ thing.last_cleaned }}</p>
+                <a href="#" class="btn btn-primary">See Details</a>
+            </div>
+        </div>
+        <br>
+    {% endfor %}
+{% endblock content %}
