--- a/dashboard/static/dashboard/main.css
+++ b/dashboard/static/dashboard/main.css
@@ -1,84 +1,70 @@
-body {
-  background: #fafafa;
-  color: #333333;
-  margin-top: 5rem;
-}
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
 
-h1, h2, h3, h4, h5, h6 {
-  color: #444444;
-}
-
-ul {
+*{
   margin: 0;
-}
-
-.bg-steel {
-  background-color: #5f788a;
-}
-
-.site-header .navbar-nav .nav-link {
-  color: #cbd5db;
-}
-
-.site-header .navbar-nav .nav-link:hover {
-  color: #ffffff;
-}
-
-.site-header .navbar-nav .nav-link.active {
-  font-weight: 500;
-}
-
-.content-section {
-  background: #ffffff;
-  padding: 10px 20px;
-  border: 1px solid #dddddd;
-  border-radius: 3px;
-  margin-bottom: 20px;
-}
-
-.article-title {
-  color: #444444;
-}
-
-a.article-title:hover {
-  color: #428bca;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
   text-decoration: none;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
-.article-content {
-  white-space: pre-line;
+body{
+   background-color: #f3f5f9;
 }
 
-.article-img {
-  height: 65px;
-  width: 65px;
-  margin-right: 16px;
+.wrapper{
+  display: flex;
+  position: relative;
 }
 
-.article-metadata {
-  padding-bottom: 1px;
-  margin-bottom: 4px;
-  border-bottom: 1px solid #e3e3e3
+.wrapper .sidebar{
+  width: 15rem;
+  height: 100%;
+  background: rgb(59, 56, 82);
+  padding: 30px 0px;
+  position: fixed;
 }
 
-.article-metadata a:hover {
-  color: #333;
-  text-decoration: none;
+.wrapper .sidebar h2{
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
-.article-svg {
+.wrapper .sidebar ul li{
+  padding: 15px;
+  border-bottom: 1px solid #bdb8d7;
+  border-bottom: 1px solid rgba(0,0,0,0.05);
+  border-top: 1px solid rgba(255,255,255,0.05);
+}
+
+.wrapper .sidebar ul li a{
+  color: #bdb8d7;
+  display: block;
+}
+
+.wrapper .sidebar ul li a .fas{
   width: 25px;
-  height: 25px;
-  vertical-align: middle;
 }
 
-.account-img {
-  height: 125px;
-  width: 125px;
-  margin-right: 20px;
-  margin-bottom: 16px;
+.wrapper .sidebar ul li:hover{
+  background-color: #594f8d;
 }
 
-.account-heading {
-  font-size: 2.5rem;
+.wrapper .sidebar ul li:hover a{
+  color: #fff;
 }
+
+.wrapper .main_content{
+  width: 100%;
+  margin-left: 200px;
+}
+
+.wrapper .main_content .info{
+  margin: 20px;
+  color: #717171;
+  line-height: 25px;
+}
+
