--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -29,9 +29,10 @@
         <ul>
             <li><a href="#"><i class="fas fa-chart-bar"></i>Home</a></li>
             <li><a href="#"><i class="fas fa-plus-square"></i>Add Device</a></li>
-            <li><a href="#"><i class="fas fa-project-diagram"></i>portfolio</a></li>
             <li><a href="#"><i class="fas fa-address-card"></i>About</a></li>
-            <li><a href="#"><i class="fas fa-map-pin"></i>Map</a></li>
+            <li><a href="#"><i class="fas fa-store"></i>Device Market</a></li>
+            <li><a href="#"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
+
         </ul>
     </div>
 </div>
