Cutomized admin page with filterable fields

--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -1,16 +1,18 @@
 {% extends "dashboard/base.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
     <br><br><br><br>
 
-        <div class="col-md-6">
-            <div class="card  bg-light" style="width: 50rem; border-radius: 15px">
-                <center><h1>Register yourself</h1></center>
+        <div class="col-md-4">
+            <div class="card  bg-light" style="width: 45rem; border-radius: 15px">
+                <center><h1>Register a Human</h1></center>
                 <div class="content-section">
                     <form method="post">
                         {% csrf_token %}
                         <fieldset class="form-group">
                             <legend class="fieldBox mb-4"></legend>
-                            {{ form.as_p }}
+                            {{ form|crispy }}
+
                         </fieldset>
                         <div class="form-group">
                             <center>
