Added Login/Logout feature with Login page background

--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -22,7 +22,7 @@
                     </form>
                     <center>
                         <div class="border-top pt-3">
-                            Registered Already? Great! head up this way <a class="ml-2" href="{% url 'login' %}">Login</a>
+                            Registered Already? Great, head up this way <a class="ml-2" href="#">Login</a>
                         </div>
                     </center>
                 </div>
