--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -31,8 +31,8 @@
             <li><a href="#"><i class="fas fa-plus-square"></i>Add Device</a></li>
             <li><a href="#"><i class="fas fa-address-card"></i>About</a></li>
             <li><a href="#"><i class="fas fa-store"></i>Device Market</a></li>
-            <li><a href="#"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
-
+{#            <li><a href="#"><i class="fas fa-sign-out-alt"></i>Logout</a></li>#}
+            <li><a href="{% url 'logout' %}?next=/login"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
         </ul>
     </div>
 </div>
