--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -9,7 +9,7 @@
 
     .bg {
         /* The image used */
-        background-image: url("https://cdn.hipwallpaper.com/i/82/56/hlBpm9.jpg");
+        background-image: url("https://wallpaperplay.com/walls/full/8/1/3/89014.jpg");
 
         /* Full height */
         height: 100%;
