--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -27,10 +27,10 @@
     <div class="sidebar">
         <h2>ThingsBoard</h2>
         <ul>
-            <li><a href="{% urls 'dashboard-info' %}"><i class="fas fa-chart-bar"></i>Home</a></li>
+            <li><a href="{% url 'dashboard-home' %}"><i class="fas fa-chart-bar"></i>Home</a></li>
             <li><a href="#"><i class="fas fa-plus-square"></i>Add Device</a></li>
             <li><a href="#"><i class="fas fa-store"></i>Device Market</a></li>
-            <li><a href="#"><i class="fas fa-id-badge"></i>Profile</a></li>
+            <li><a href="{% url 'profile' %}"><i class="fas fa-id-badge"></i>Profile</a></li>
             <li><a href="{% url 'logout' %}?next=/login"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
             <li><a href="#"><i class="fas fa-address-card"></i>About</a></li>
         </ul>
