--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -2,15 +2,9 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <br><br><br><br>
-        <div class="col-md-4">
-            <div class="card  bg-light" style="width: 45rem; border-radius: 15px">
-                <center><h1>Register a Human</h1></center>
-                <h1>{{% user.name %}}</h1>
-                <div class="content-section">
-
-                </div>
-            </div>
+    <div class="col-md-4">
+        <div class="card  bg-light" style="width: 45rem; border-radius: 15px">
+            <h1>Name: {{ user.username }}</h1>
         </div>
-
-
+    </div>
 {% endblock content %}
