--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -32,7 +32,7 @@
             <li><a href="#"><i class="fas fa-store"></i>Device Market</a></li>
             <li><a href="{% url 'profile' %}"><i class="fas fa-id-badge"></i>Profile</a></li>
             <li><a href="{% url 'logout' %}?next=/login"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
-            <li><a href="#"><i class="fas fa-address-card"></i>About</a></li>
+            <li><a href="{% url 'about' %}"><i class="fas fa-address-card"></i>About</a></li>
         </ul>
     </div>
 </div>
