--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -33,6 +33,10 @@
             <li><a href="{% url 'profile' %}"><i class="fas fa-id-badge"></i>Profile</a></li>
             <li><a href="{% url 'logout' %}?next=/login"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
             <li><a href="{% url 'about' %}"><i class="fas fa-address-card"></i>About</a></li>
+            {% if user.is_superuser %}
+                <li><a href="{% url 'add_manufacturer' %}"><i class="fas fa-industry"></i>About</a></li>
+            {%  endif %}
+    <p>Hello, admin.</p>
         </ul>
     </div>
 </div>
