--- a/dashboard/templates/dashboard/addDevice.html
+++ b/dashboard/templates/dashboard/addDevice.html
@@ -34,7 +34,7 @@
                 </div>
             </form>
 
-            <input type="submit" value="OK">
+{#            <input type="submit" value="OK">#}
             </form>
         </div>
     </div>
