--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -28,15 +28,26 @@
         <h2>ThingsBoard</h2>
         <ul>
             <li><a href="{% url 'dashboard-home' %}"><i class="fas fa-chart-bar"></i>Home</a></li>
-            <li><a href="{% url 'add_device' %}"><i class="fas fa-plus-square"></i>Add Device</a></li>
-            <li><a href="#"><i class="fas fa-store"></i>Device Market</a></li>
+            <li><a href="{% url 'add_device' %}"><i class="fas fa-plus-square"></i>Install Device</a></li>
+
             <li><a href="{% url 'profile' %}"><i class="fas fa-id-badge"></i>Profile</a></li>
             <li><a href="{% url 'logout' %}?next=/login"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
             <li><a href="{% url 'about' %}"><i class="fas fa-address-card"></i>About</a></li>
-{#            {% if user.is_superuser %}#}
-{#                <li><a href="{% url 'add_manufacturer' %}"><i class="fas fa-industry"></i>About</a></li>#}
-{#            {%  endif %}#}
-    <p>Hello, admin.</p>
+            <li><a href="#"><i class="fas fa-store"></i>Device Market</a></li>
+            {% if user.is_superuser %}
+                {#                <li><a href="{% url 'add_device_type' %}"><i class="fas fa-industry"></i>Add Device Type</a></li>#}
+                {#                <li><a href="{% url 'add_manufacturer' %}"><i class="fas fa-industry"></i>Add Manufacturer</a></li>#}
+                {#                <li><a href="{% url 'add_seller' %}"><i class="fas fa-store"></i>Add Seller</a></li>#}
+                {#                <li><a href="{% url 'add_service_provider' %}"><i class="fas fa-industry"></i>Add Service Provider</a>#}
+                <h3><i class="fas fa-user-plus"></i>Admin Tasks</h3>
+                <li><a href="#"><i class="fab fa-creative-commons-share"></i>Add Device Type</a></li>
+                <li><a href="#"><i class="fas fa-industry"></i>Add Manufacturer</a></li>
+                <li><a href="#"><i class="fas fa-store"></i>Add Seller</a></li>
+                <li><a href="#"><i class="fas fa-tools"></i>Add Service Provider</a>
+
+                </li>
+            {% endif %}
+            <p>Hello, admin.</p>
         </ul>
     </div>
 </div>
