--- a/dashboard/templates/dashboard/deviceCard.html
+++ b/dashboard/templates/dashboard/deviceCard.html
@@ -1,7 +1,7 @@
 {% extends "dashboard/base.html" %}
 {% block content %}
     <br><br><br><br>
-    {% for thing in things %}g
+    {% for thing in things %}
         {% if forloop.first %}
             <div class="row">
         {% endif %}
