add address working

--- a/dashboard/templates/dashboard/addAddress.html
+++ b/dashboard/templates/dashboard/addAddress.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <br>
-    <h1>Add New Manufacturer</h1>
+    <h1>Add New Address</h1>
     <br>
     <form method="post">
         {% csrf_token %}
