--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -45,7 +45,7 @@
                 <li><a href="{% url 'add_manufacturer' %}"><i class="fas fa-industry"></i>Add Manufacturer</a></li>
                 <li><a href="#"><i class="fas fa-store"></i>Add Seller</a></li>
                 <li><a href="#"><i class="fas fa-tools"></i>Add Service Provider</a>
-                <li><a href="#"><i class="fas fa-map-marker-alt"></i>Add Address</a>
+                <li><a href="{% url 'add_address' %}"><i class="fas fa-map-marker-alt"></i>Add Address</a>
 
                 </li>
             {% endif %}
