--- a/dashboard/templates/dashboard/addDeviceModel.html
+++ b/dashboard/templates/dashboard/addDeviceModel.html
@@ -4,7 +4,7 @@
     <br>
     <h1>Add New Device Model in your Catalogue</h1>
     <br>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="fieldBox mb-4"></legend>
