--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -12,7 +12,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" />
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}"/>
     {% if title %}
         <title> IoT - {{ title }}</title>
     {% else %}
@@ -36,16 +36,13 @@
             <li><a href="#"><i class="fas fa-store"></i>Device Market</a></li>
             {% if user.is_superuser %}
                 <br>
-                {#                <li><a href="{% url 'add_device_type' %}"><i class="fas fa-industry"></i>Add Device Type</a></li>#}
-                {#                <li><a href="{% url 'add_manufacturer' %}"><i class="fas fa-industry"></i>Add Manufacturer</a></li>#}
-                {#                <li><a href="{% url 'add_seller' %}"><i class="fas fa-store"></i>Add Seller</a></li>#}
-                {#                <li><a href="{% url 'add_service_provider' %}"><i class="fas fa-industry"></i>Add Service Provider</a>#}
                 <h2 style="text-align:left;"><i class="fas fa-bolt"></i> Admin</h2>
-                <li><a href="#"><i class="fas fa-plus"></i>Add Device to Catalog</a></li>
-                <li><a href="{% url 'add_manufacturer' %}"><i class="fas fa-industry"></i>Add Manufacturer</a></li>
-                <li><a href="#"><i class="fas fa-store"></i>Add Seller</a></li>
-                <li><a href="#"><i class="fas fa-tools"></i>Add Service Provider</a>
                 <li><a href="{% url 'add_address' %}"><i class="fas fa-map-marker-alt"></i>Add Address</a>
+                <li><a href="{% url 'add_device_model' %}"><i class="fas fa-wifi"></i>Add Device to Catalog</a></li>
+                <li><a href="{% url 'add_home' %}"><i class="fas fa-home"></i>Add Home</a></li>
+                <li><a href="{% url 'add_device_model' %}"><i class="fas fa-industry"></i>Add Manufacturer</a></li>
+                <li><a href="{% url 'add_seller' %}"><i class="fas fa-store"></i>Add Seller</a></li>
+                <li><a href="{% url 'add_service_provider' %}"><i class="fas fa-tools"></i>Add Service Provider</a></li>
 
                 </li>
             {% endif %}
