--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,16 +1,14 @@
 {% extends "dashboard/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <br><br><br><br>
     <div class="content-section">
-        <div class="card  bg-light" style="width: 45rem; border-radius: 15px">
-            <div class="media">
-                <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
-                <div class="media-body">
-                    <h2 class="media-body">{{ user.username }}</h2>
-                    <p class="text-secondary">{{ user.email}} </p>
-                </div>
-            </div>
+      <div class="media">
+        <img class="rounded-circle account-img" src="{{ user.ownerprofile.image.url }}">
+        <div class="media-body">
+          <h2 class="account-heading">{{ user.username }}</h2>
+          <p class="text-secondary">{{ user.email }}</p>
         </div>
+      </div>
+      <!-- FORM HERE -->
     </div>
 {% endblock content %}
