--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -2,13 +2,26 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
-      <div class="media">
-        <img class="rounded-circle account-img" src="{{ user.ownerprofile.image.url }}">
-        <div class="media-body">
-          <h2 class="account-heading">{{ user.username }}</h2>
-          <p class="text-secondary">{{ user.email }}</p>
+        <div class="media">
+            <img class="rounded-circle account-img" src="{{ user.ownerprofile.image.url }}" width="100px"
+                 height="100px">
+            <div class="media-body">
+                <h2 class="account-heading">{{ user.username }}</h2>
+                <p class="text-secondary">{{ user.email }}</p>
+            </div>
         </div>
-      </div>
-      <!-- FORM HERE -->
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="fieldBox mb-4"></legend>
+                {{ user_update_form|crispy }}
+                {{ profile_update_form|crispy }}
+            </fieldset>
+            <div class="form-group">
+                <center>
+                    <button class="btn btn-outline-info" type="submit">Update</button>
+                </center>
+            </div>
+        </form>
     </div>
 {% endblock content %}
