--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -2,14 +2,17 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
+        <br>
+        <br>
         <div class="media">
-            <img class="rounded-circle account-img" src="{{ user.ownerprofile.image.url }}" width="100px"
+            <img class="account-img" src="{{ user.ownerprofile.image.url }}" width="100px"
                  height="100px">
             <div class="media-body">
                 <h2 class="account-heading">{{ user.username }}</h2>
                 <p class="text-secondary">{{ user.email }}</p>
             </div>
         </div>
+        <br>
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset class="form-group">
