--- a/dashboard/static/dashboard/main.css
+++ b/dashboard/static/dashboard/main.css
@@ -10,8 +10,9 @@
 }
 
 body{
-   background-color: #f3f5f9;
+   background-color: #f7f5f9;
 }
+
 
 .wrapper{
   display: flex;
@@ -19,10 +20,10 @@ body{
 }
 
 .wrapper .sidebar{
-  width: 15rem;
+  width: 14rem;
   height: 100%;
   background: rgb(59, 56, 82);
-  padding: 30px 0px;
+  padding: 10px 0px;
   position: fixed;
 }
 
@@ -31,13 +32,15 @@ body{
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 30px;
+   font-size: 1.3vw;
+  overflow-wrap: break-word;
 }
 
 .wrapper .sidebar ul li{
   padding: 15px;
   border-bottom: 1px solid #bdb8d7;
   border-bottom: 1px solid rgba(0,0,0,0.05);
-  border-top: 1px solid rgba(255,255,255,0.05);
+  border-top: 1px solid rgba(255,255,255,0.1);
 }
 
 .wrapper .sidebar ul li a{
@@ -67,7 +70,5 @@ body{
   color: #717171;
   line-height: 25px;
 }
-
-
 
 
