--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -54,7 +54,7 @@
 <main role="main" class="container" >
     <div class="row">
     <br>
-        <div class="col-lg-auto">
+        <div class="col-lg-10">
             {% if messages %}
                 {% for message in messages %}
                     <div class="alert alert-{{ message.tags }}">
