--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -33,7 +33,7 @@
             <li><a href="{% url 'profile' %}"><i class="fas fa-id-badge"></i>Profile</a></li>
             <li><a href="{% url 'logout' %}?next=/login"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
             <li><a href="{% url 'about' %}"><i class="fas fa-address-card"></i>About</a></li>
-            <li><a href="#"><i class="fas fa-store"></i>Device Market</a></li>
+{#            <li><a href="#"><i class="fas fa-store"></i>Device Market</a></li>#}
             {% if user.is_superuser %}
                 <br>
                 <h2 style="text-align:left;"><i class="fas fa-bolt" style="margin-left: 1rem"></i> Admin</h2>
