--- a/dashboard/templates/dashboard/deviceCard.html
+++ b/dashboard/templates/dashboard/deviceCard.html
@@ -1,26 +1,39 @@
 {% extends "dashboard/base.html" %}
 {% block content %}
-    <br><br><br><br>
+
+    <br>
+    <h1 class="text-center" style="-webkit-text-fill-color: dimgrey">Your Installed Devices</h1>
+
     {% for thing in things %}
         {% if forloop.first %}
             <div class="row">
         {% endif %}
     <div class="col-md-4">
-        <div class="card  bg-light shadow p-3 mb-5 bg-white rounded" style="width: 18rem; border-radius: 25px">
-            <center><img src="https://i.imgur.com/SAnmzn0.png" class="card-img-top shadow p-3 mb-5 bg-white rounded"
-                         alt="..." style="height: 66%; width: 66%;"></center>
-            <div class="card-body">
-                <h5 class="card-title"> Device : {{ thing.device_model_info.name }}</h5>
-                <p class="card-text"> Description: {{ thing.description }}</p>
-                <p class="card-text"> Max Life: {{ thing.device_model_info.max_life }}</p>
-                <p class="card-text"> Used: {{ thing.life_used }}</p>
-                <p class="card-text"> Date manufactured: {{ thing.purchase_date|date:"d M, Y" }}</p>
-                <center><a href="#" class="btn btn-primary">See Details</a></center>
+        <div class="container">
+            <div class="card  bg-info shadow p-0 m-1 bg-transparent"
+                 style="width: 18rem;min-height: 25rem; border-radius: 3%; margin-top: 25%;">
+                <center><img src="{{ thing.device_model_info.image.url }}"
+                             class="card-img-top"
+                             alt="..."
+                             style="height: 10rem; width: 10rem;border-radius: 2%;margin-top: 2%;margin-bottom: 5%">
+                </center>
+
+                <div class="container">
+                    <div class="card-body p-sm-0 m-0" style="line-height: 90%;">
+                        <h5 class="card-title">Device : {{ thing.device_model_info.name }}</h5>
+
+                        <p class="card-text"> Description: {{ thing.description }}</p>
+                        <p class="card-text"> Max Life: {{ thing.device_model_info.max_life }}</p>
+                        <p class="card-text">Used: {{ thing.life_used }}</p>
+                        <p class="card-text">Date manufactured: {{ thing.purchase_date|date:"d M, Y" }}</p>
+                        <a href="#" class="btn btn-primary" style="position: absolute;left: 50%;width: 108px;
+                            margin-left: -54px;bottom:5px;">See Details</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    {% if forloop.counter|divisibleby:3 %}</div>
-        <br>
+    {% if forloop.counter|divisibleby:6 %}</div>
         <div class="row">
     {% endif %}
     {% if forloop.last %}</div>{% endif %}
