--- a/dashboard/templates/dashboard/addDeviceModel.html
+++ b/dashboard/templates/dashboard/addDeviceModel.html
@@ -9,11 +9,10 @@
         <fieldset class="form-group">
             <legend class="fieldBox mb-4"></legend>
             {{ form|crispy }}
-
         </fieldset>
         <div class="form-group">
             <center>
-                <button class="btn btn-outline-info" type="submit">Submit</button>
+                <button class="btn btn-outline-info" type="submit">Update</button>
             </center>
         </div>
     </form>
