--- a/dashboard/templates/dashboard/deviceCard.html
+++ b/dashboard/templates/dashboard/deviceCard.html
@@ -13,6 +13,7 @@
             <div class="card  bg-info shadow p-0 m-1 bg-transparent"
                  style="width: 18rem;min-height: 25rem; border-radius: 3%; margin-top: 25%;">
                 <center><img src="{{ thing.device_model_info.image.url }}"
+
                              class="card-img-top"
                              alt="..."
                              style="height: 10rem; width: 10rem;border-radius: 2%;margin-top: 2%;margin-bottom: 5%">
@@ -23,6 +24,7 @@
                         <h5 class="card-title">Device : {{ thing.device_model_info.name }}</h5>
 
                         <p class="card-text"> Description: {{ thing.description }}</p>
+                        <p class="card-text"> Description: {{ thing.device_model_info.image.url }}</p>
                         <p class="card-text"> Max Life: {{ thing.device_model_info.max_life }}</p>
                         <p class="card-text">Used: {{ thing.life_used }}</p>
                         <p class="card-text">Date manufactured: {{ thing.purchase_date|date:"d M, Y" }}</p>
