--- a/dashboard/templates/dashboard/addAddress.html
+++ b/dashboard/templates/dashboard/addAddress.html
@@ -19,7 +19,7 @@
     </form>
     <hr>
     <br>
-    <h1>Existing Manufacturers</h1>
+    <h1>Existing Addresses</h1>
     {% for address in existing_addresses %}
         <div class="card bg-light" style="width: 35rem; border-radius: 15px">
             <h5>Street: {{ address.street }}</h5>
