--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,20 +1,15 @@
 {% load static %}
 <!DOCTYPE html>
-
 <style>
     body, html {
         height: 100%;
         margin: 0;
     }
 
+
     .bg {
-        /* The image used */
         background-image: url("https://wallpaperplay.com/walls/full/8/1/3/89014.jpg");
-
-        /* Full height */
         height: 100%;
-
-        /* Center and scale the image nicely */
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -38,11 +33,12 @@
 {% load crispy_forms_tags %}
 <div class="bg">
     <center>
+     <center><h1 style="font-weight: bold; color: #ffffff; font-size: 85px " >ThingsBoard : Simplify</h1></center>
         {% block content %}
             <br><br><br><br>
             <br><br><br><br><br><br>
             <div class="col-md-2">
-                <div class="card  bg-light" style="width: 25rem; border-radius: 15px">
+                <div class="card bg-transparent shadow-lg" style="width: 25rem; border-radius: 15px">
                     <center><h1>Sign in</h1></center>
                     <br>
                     <div class="content-section">
@@ -51,7 +47,6 @@
                             <fieldset class="form-group">
                                 <legend class="fieldBox mb-8"></legend>
                                 {{ form|crispy }}
-
                             </fieldset>
                             <div class="form-group">
                                 <center>
@@ -62,8 +57,8 @@
                             </div>
                         </form>
                         <center>
-                            <div class="border-top pt-3">
-                                Want to join? <a class="ml-2" href="{% url 'signup' %}">Signup</a>
+                            <div class="border-top pt-3" style="color:white">
+                                Want to join? <a class="ml-2" style="color:white; font-weight: bold" href="{% url 'signup' %}">Signup</a>
                             </div>
                         </center>
                     </div>
