--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -8,7 +8,7 @@
 
 
     .bg {
-        background-image: url("https://wallpaperplay.com/walls/full/8/1/3/89014.jpg");
+        background-image: url("https://i.imgur.com/NXl4S8j.jpg");
         height: 100%;
         background-position: center;
         background-repeat: no-repeat;
