--- a/dashboard/templates/dashboard/addAddress.html
+++ b/dashboard/templates/dashboard/addAddress.html
@@ -22,7 +22,7 @@
     <br>
     <h1>Existing Addresses</h1>
     {% for address in existing_addresses %}
-        <div class="card bg-light" style="width: 35rem; border-radius: 15px">
+        <div class="card bg-light shadow p-lg-3" style="width: 35rem; border-radius: 15px">
             <h5>Street: {{ address.street }}</h5>
             <h5>Zip: {{ address.zip }}</h5>
         </div>
