--- a/dashboard/templates/dashboard/addDevice.html
+++ b/dashboard/templates/dashboard/addDevice.html
@@ -13,7 +13,7 @@
                 </fieldset>
                 <div class="form-group">
                     <center>
-                        <button class="btn btn-outline-info" type="submit">Add</button>
+                        <button class="btn btn-outline-info shadow" type="submit">Add</button>
                     </center>
                 </div>
             </form>
