--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -33,7 +33,7 @@
 {% load crispy_forms_tags %}
 <div class="bg">
     <center>
-     <center><h1 style="font-weight: bold; color: #ffffff; font-size: 85px " >ThingsBoard : Simplify</h1></center>
+        <center><h1 style="font-weight: bold; color: #ffffff; font-size: 85px ">ThingsBoard : Simplify</h1></center>
         {% block content %}
             <br><br><br><br>
             <br><br><br><br><br><br>
@@ -58,7 +58,8 @@
                         </form>
                         <center>
                             <div class="border-top pt-3" style="color:white">
-                                Want to join? <a class="ml-2" style="color:white; font-weight: bold" href="{% url 'signup' %}">Signup</a>
+                                Want to join? <a class="ml-2" style="color:white; font-weight: bold"
+                                                 href="{% url 'signup' %}">Signup</a>
                             </div>
                         </center>
                     </div>
