--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -4,7 +4,7 @@
     <br><br><br><br>
 
         <div class="col-md-4">
-            <div class="card  bg-light" style="width: 45rem; border-radius: 15px">
+            <div class="card  bg-light shadow-sm" style="width: 45rem; border-radius: 15px">
                 <center><h1>Register a Human</h1></center>
                 <div class="content-section">
                     <form method="post">
