--- a/dashboard/templates/dashboard/addManufacturer.html
+++ b/dashboard/templates/dashboard/addManufacturer.html
@@ -25,7 +25,7 @@
 
 
     {% for manufacturers in existing_manufacturers %}
-        <div class="card bg-light" style="width: 35rem; border-radius: 15px">
+        <div class="card bg-light shadow-sm p-lg-3" style="width: 35rem; border-radius: 15px">
             <h2>Name: {{ manufacturers.name }}</h2>
             <h4>Address: {{ manufacturers.address.street }}</h4>
             <h5>Phone: {{ manufacturers.phone_number }}</h5>
