--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -43,6 +43,7 @@
                 <li><a href="{% url 'add_manufacturer' %}"><i class="fas fa-industry"></i>Add Manufacturer</a></li>
                 <li><a href="{% url 'add_seller' %}"><i class="fas fa-store"></i>Add Seller</a></li>
                 <li><a href="{% url 'add_service_provider' %}"><i class="fas fa-tools"></i>Add Service Provider</a></li>
+                <li><a href="{% url 'subscribers_list' %}"><i class="fas fa-envelope-open"></i>View Subscriber's List</a></li>
 
                 </li>
             {% endif %}
