password reset working!

--- a/users/templates/users/passwordReset.html
+++ b/users/templates/users/passwordReset.html
@@ -10,12 +10,11 @@
                 <form  method="post">
                     {% csrf_token %}
                     <label for="email">Enter email: </label>
-                    <input id="email" type="text" name="name_field">
-                    <input type="submit" value="Request Reset">
+                    <input id="email" type="text" name="email_form_field">
+                    <input type="submit" value="Request Password Reset">
                 </form>
             </div>
         </div>
     </div>
-
 
 {% endblock content %}
