button disabled for future features

--- a/dashboard/templates/dashboard/deviceCard.html
+++ b/dashboard/templates/dashboard/deviceCard.html
@@ -26,7 +26,7 @@
                         <p class="card-text"> Max Life: {{ thing.device_model_info.max_life }}</p>
                         <p class="card-text">Used: {{ thing.life_used }}</p>
                         <p class="card-text">Date manufactured: {{ thing.purchase_date|date:"d M, Y" }}</p>
-                        <a href="#" class="btn btn-primary" style="position: absolute;left: 50%;width: 108px;
+                        <a href="#" class="btn  btn-disabled" style="position: absolute;left: 50%;width: 108px;
                             margin-left: -54px;bottom:5px;">See Details</a>
                     </div>
                 </div>
